<resources>
    <string name="app_name" translatable="false"><b>Workout<br>\n</br>Tracker</b></string>
    <string name="create_acc">Create Account</string>
    <string name="login">Log In</string>
    <string name="no_acc">Have no account yet? Sign up</string>
    <string name="alr_signedup">Already signed up? Log in</string>
    <string name="my_exer">My exercises</string>
    <string name="workOut_List">Workout List</string>
    <string name="del_exer">Are you sure you want to delete this exercise?</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_title" translatable="false">Workout Tracker</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="logo_desc">Muscular person</string>
    <string name="ex_name">Exercise name</string>
    <string name="ex_muscle">Main muscle</string>
    <string name="op_cancel">@android:string/cancel</string>
    <string name="op_ok">@android:string/ok</string>
    <string name="ex_new">New exercise</string>
    <string name="btn_add">Add button</string>
    <string name="ex_img">Workout Image</string>
    <string name="ex_create">Create</string>
    <string name="ex_update">Update</string>
    <string name="perm_needed">Permission needed</string>
    <string name="perm_why">External storage is needed in order to add images to the exercises</string>
    <string name="perm_gr">Permission GRANTED</string>
    <string name="perm_den">Permission DENIED</string>
    <string name="up_progress">Upload in progress</string>
    <string name="item_ex_up">Exercise updated</string>
    <string name="item_ex_rec">Exercise recorded</string>
    <string name="item_ex_rem">Exercise removed</string>
    <string name="logout">Logged out</string>
    <string name="login_suc">Login successful</string>
    <string name="login_fai">Login failed</string>
    <string name="pub_wk">Public Workouts</string>
    <string name="per_wk">Personal Workouts</string>
    <string name="img_set">Set Image</string>
    <string name="ex_del">Delete</string>
    <string name="sgnup_succ">Signup successful</string>
    <string name="sgnup_fl">Signup failed</string>
    <string name="pass_leng">Password must be at least 6 characters length.</string>
    <string name="usrn_emp">Username cannot be empty.</string>
    <string name="mailpassfill">Email and password must be filled.</string>
    <string name="pass_match">Passwords must match.</string>
</resources>