<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorE"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_reg"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher_wk_foreground"
        android:contentDescription="@string/logo_desc" />

    <TextView
        android:id="@+id/t_title"
        android:layout_width="118dp"
        android:layout_height="63dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_reg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btn_main_reg"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:backgroundTint="@color/colorB"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         />

    <Button
        android:id="@+id/btn_main_log"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="124dp"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/colorB" />


</androidx.constraintlayout.widget.ConstraintLayout>